# packetSwiffer

./: .gitignore  Cargo.toml  README.md
docs/enum/: error.md  reporter.md
docs/struct/: args.md  filter.md  packet.md  report.md  reportHeader.md  reportWriter.md  settings.md
src/: main.rs
src/lib/: args.rs  lib.rs  menu.rs  parser.rs  report.rs  tui.rs  utils.rs
